---------------------------
  Contributors
---------------------------

Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret

---------------------------
  Jackdmp changes log
---------------------------

2008-07-18 Stephane Letz  <letz@grame.fr>

	* Correct audioadapter when a sample rate value different from jack server one is chosen.
	* Cleanup in JackTransportEngine, move some code that was in JackClient class.
	* Remove transport_type.h file, move transport types in types.h file.

2008-07-12 Stephane Letz  <letz@grame.fr>

	* Loopback driver working again.

2008-07-08 Stephane Letz  <letz@grame.fr>

	* Add jack_get_descriptor in internal clients API.
	* Fix JackFreewheelDriver::Process() in case if client time-out : continue processing until a better recovery strategy is chosen.

2008-07-08 Stephane Letz  <letz@grame.fr>

	* Merge windows branch back to trunk.

2008-07-05 Stephane Letz  <letz@grame.fr>

	* Netioadapter renamed in audioadapter.

2008-07-04 Stephane Letz  <letz@grame.fr>

	* Netioadapter now adapts for buffer size and sample rate changes.

2008-07-03 Stephane Letz  <letz@grame.fr>

	* Add IsFixedBufferSize method in all drivers.

2008-07-02 Stephane Letz  <letz@grame.fr>

	* New netioadapter in server client.

2008-06-20 Stephane Letz  <letz@grame.fr>

	* Add new jack_client_stop_thread and jack_client_kill_thread API.
	* New generic BuildClientPath for internal clients loading.

2008-06-19 Stephane Letz  <letz@grame.fr>

	* Embed JackEngineControl in JackDriver (starting from Tim Blechmann idea).

2008-06-18 Stephane Letz  <letz@grame.fr>

	* On OSX waf now compiles Universal Binaries.

2008-06-17 Stephane Letz  <letz@grame.fr>

	* Driver class hierarchy simplification.
	* Update waf for compilation on OSX.

2008-06-13 Stephane Letz  <letz@grame.fr>
